# Brainfuck-Interpreter

./: .gitignore  CMakeLists.txt  Conventional Commits.md  LICENSE  README.md  interpreter.hpp  main.cpp  utils.hpp
docs/ErrorList/: BrainfuckErrorList.md
includes/defs/: defs.hpp
src/: CMakeLists.txt
src/brainfuck/: AbstractExpression.h  interpreter.h
src/utils/ConsoleTextManager/: ConsoleTextManager.h
src/utils/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h
src/utils/StringBuilder/: StringBuilder.h
src/whitespace/: AbstractExpression.h  Memory.h  Runner.cpp  Runner.h  interpreter.h
src/whitespace/expressions/: ArithmeticExpressions.h  FlowExpressions.h  HeapExpressions.h  IOExpressions.h  StackExpressions.h
test/brainfucks/: fibonacci-prev-10.bf  output-1-to-10.bf
test/whitespaces/: hello-world.whs
